--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,11 +18,12 @@ jobs:
       - run: git submodule update --init ./package
       - run: npm run package
 
-  releases:
-    name: Repository Releases
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
+  # releases:
+  #   name: Repository Releases
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+
       - name: Get version from package.json
         id: artifact
         run: |
@@ -70,22 +71,24 @@ jobs:
           overwrite_files: true
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  vsce-publish:
-    name: Publish on VS Code Marketplace
-    runs-on: ubuntu-latest
-    needs: build
+  # vsce-publish:
+  #   name: Publish on VS Code Marketplace
+  #   runs-on: ubuntu-latest
+  #   needs: build
 
-    steps:
+  #   steps:
+
       - uses: lannonbr/vsce-action@4.0.0
         with:
           args: publish -p ${{ secrets.VSCE_TOKEN }}
 
-  ovsx-publish:
-    name: Publish on Open VSX Registry
-    runs-on: ubuntu-latest
-    needs: build
+  # ovsx-publish:
+  #   name: Publish on Open VSX Registry
+  #   runs-on: ubuntu-latest
+  #   needs: build
 
-    steps:
+  #   steps:
+
       - uses: lannonbr/vsce-action@4.0.0
         with:
           args: publish --registry https://open-vsx.org/vscode-api -p ${{ secrets.XCSS_OVSX }}
