--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,12 +18,6 @@ jobs:
       - run: git submodule update --init ./package
       - run: npm run package
 
-  # releases:
-  #   name: Repository Releases
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   steps:
-
       - name: Get version from package.json
         id: artifact
         run: |
@@ -71,24 +65,14 @@ jobs:
           overwrite_files: true
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  # vsce-publish:
-  #   name: Publish on VS Code Marketplace
-  #   runs-on: ubuntu-latest
-  #   needs: build
-
-  #   steps:
-
       - uses: lannonbr/vsce-action@4.0.0
+        name: Publish on VS Code Marketplace
         with:
           args: publish -p ${{ secrets.VSCE_TOKEN }}
-
-  # ovsx-publish:
-  #   name: Publish on Open VSX Registry
-  #   runs-on: ubuntu-latest
-  #   needs: build
-
-  #   steps:
+        continue-on-error: true
 
       - uses: lannonbr/vsce-action@4.0.0
+        name: Publish on Open VSX Registry
         with:
           args: publish --registry https://open-vsx.org/vscode-api -p ${{ secrets.XCSS_OVSX }}
+        continue-on-error: true
