--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: "22"
 
-      - run: git submodule update --init ./package
+      - run: git submodule update --init --recursive ./package
       - run: npm run package
 
       - name: Get version from package.json
