--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
       - run: git submodule update --init ./package
       - run: |
           cd package
-          git submodule update --init ./package/scaffold
+          git submodule update --init ./scaffold
           cd ..
       - run: npm run package
 
